--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "express-session": "^1.15.1",
     "parse-redis-url": "^0.0.2",
     "passwordless": "^1.1.2",
-    "passwordless-redisstore": "^1.0.2",
+    "passwordless-redisstore": "git+https://git@github.com/pA1nD/passwordless-redisstore.git",
     "pg": "^6.1.2",
     "resolve": "^1.3.1"
   },
